--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -2,7 +2,7 @@
 	font-family: Helvetica;
 	border: 10px solid black;
     	border-radius: 8px;
-    	background: url("../media/city.jpg") gray;
+    	background: url("../media/paper.jpg") gray;
 	background-size: cover;
 	background-position: right;
 	background-repeat: no-repeat;
