--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -42,64 +42,52 @@ body .projectBoxes h3{
 
 }
 
-dummy{
-	border: 10px solid red;
-	border-radius: 0px;
-	Background-color: white;
-	width: 67%;
-	margin: auto;
-	margin-top: 25px;
-
-}
-
-.container{
-	 position: relative;
-}
-
-img{
-  margin: auto;
-  width: 100%;
- 
-}
-.card{
-  text-align:center;
-
-}
-
-.face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-.face.front{
-  background:black; 
-}
-.face.back {
+a {
   display: block;
-  box-sizing: border-box;
-  color: black;
-  background-color: black;
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 135px;
+  background: grey;
+  border: 1px solid black;
+  border-radius: 0px;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
+a.unflip { display: none; }
+div.card { position: relative; }
 
-.card:hover .front{
+img { 
+  position: absolute;
+  width: 190px;
+  height: 265px;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -o-transition: all 1s;
+  -ms-transition: all 1s;
+  transition: all 1s;
+}
+
+img.front { z-index: 1; }
+
+img.back, div#flip:target img.front {
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
+  z-index: 0;
 }
 
-.card:hover .back {
- transform: rotateY(0deg);
-}
-.face {
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-  transition: .5s;
-}
-.face.front {
+div#flip:target a.flip { display: none; }
+div#flip:target a.unflip { display: block; }
+
+div#flip:target img.back {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
   transform: rotateY(0deg);
-} 
-
-.face.back {
-  transform: rotateY(180deg); 
+  z-index: 1;
 }
-
-
