--- a/about/about.css
+++ b/about/about.css
@@ -1,8 +1,8 @@
 body{
-    background-color: black;
+
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    width: 67%;
+
     margin: auto;
     margin-top: 3%;
 }
@@ -26,7 +26,7 @@ body{
 }
 
 .background{
-    background-image: linear-gradient(rgb(0,155,155), rgb(0,0,255));
+    /*background-image: linear-gradient(rgb(0,155,155), rgb(0,0,255));*/
     margin: 1%;
 }
 
@@ -51,7 +51,6 @@ body{
 
 .container{
     margin: 1%;
-    background: black;
     padding-left: 1%;
     padding: 3%;
 }
@@ -105,3 +104,11 @@ p{
     }
     
 }
+
+body::-webkit-scrollbar {
+    display: none;
+  }
+
+body {
+    -ms-overflow-style: none;
+  }
