--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,17 +1,27 @@
 
 body{
-    background: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     height:100vh;
-    width: 67%;
     margin: auto;
     margin-top: 3%;
 
 }
 
+body::-webkit-scrollbar {
+    display: none;
+  }
+
+body {
+    -ms-overflow-style: none;
+  }
+
 .title{
     margin-bottom: 50px;
+}
+
+a{
+    color: rgb(255,255,0);;
 }
 
 .title h1{
@@ -26,10 +36,6 @@ body{
 
     float: right;
     display: block;
-}
-
-a{
-    color: rgb(255,255,0);
 }
 
 h1{
@@ -53,15 +59,11 @@ p{
 }
 
 
-.contactBox{
-    background-image: linear-gradient(rgb(255,255,0),rgb(155, 100, 0));
-}
-
 .content {
     height:100vh;
     margin: 1%;
     border-radius: 0px;
-	background-color: black;
+
     margin: center;
 	margin-top: 25px;
     padding-left: 1%;
