--- a/index.css
+++ b/index.css
@@ -1,252 +1,127 @@
-body{
-    background: black;
-    color: white;
-    background-image: url('https://thumbs.gfycat.com/HoarseAfraidDuck-size_restricted.gif');
-    background-size: cover;
-    background-repeat: no-repeat;
+body {
+  width: 100%;
+  height: 100%;
+  background:#f5f5f5;
+  font:14px "Open Sans",arial,sans-serif;
+  background-image: url('https://thumbs.gfycat.com/HoarseAfraidDuck-size_restricted.gif');
+  background-size: cover;
+  background-repeat: no-repeat;
+}  
+
+.accordion-title {
+  position: relative;
+  background:rgba(0, 0, 0, 1);
 }
+
+
+.accordion-title h2 {
+  bottom: 3%;
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  white-space: nowrap;
+  width: 100%;
+  transform: rotate(-90deg);
+  -ms-writing-mode: lr-bt;
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+  font-size: 2em;
+  
+}
+
+.accordion-select:checked + .accordion-title + .accordion-content {
+  margin-bottom: 0;
+  margin-right: 0;
+  visibility: visible;
+}
+
+.accordion-select:not(:checked) + .accordion-title + .accordion-content{
+  visibility: hidden;
+}
+
+
+/* Generated styles starts here */
+
+.accordion {
+  border-right-color: rgb(0, 0, 0);
+  border-style: solid;
+  border-width: 1px;
+  flex-direction: row;
+  height: 95%;
+  width: 80%;
+  box-sizing: border-box;
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+  margin: auto;
+  margin-top: 1%;
+  box-shadow:2px 4px 10px rgba(0, 0, 0, 0.8);
+  transform: skewX(-15deg);
+  background-color: rgb(0,0,0,.75);
+} 
+
+.accordion-select {
+  cursor: pointer;
+ 
+  opacity: 0;
+  z-index: 1;
+  background:rgba(0, 0, 0, 1);
+  margin-bottom: -10%;
+  margin-right: -10%;
+}
+
+.accordion-title,
+.accordion-select  {
+  background-color:rgba(0, 0, 0, 1);
+  color: rgb(250, 250, 250);
+  width: 10%;
+  height: 100%;
+  font-size: 15px;
+  border-color: rgb(250, 250, 250);
+  border-left: 1px solid;
+  
+}
+
+.accordion-select:hover + .accordion-title,
+.accordion-select:checked + .accordion-title {
+  background-color:rgb(10, 17, 119);
+} 
+
+.accordion input:nth-child(3):hover  + .accordion-title,
+.accordion-select:nth-child(3) + .accordion-title {
+  background-color:rgba(250, 0, 0, 1);
+} 
+
+.accordion-select:hover + .accordion-title {
+  background-color:rgb(10, 119, 19);
+} 
+
+.accordion-select:nth-child(1):checked{
+  background: blueviolet;
+}
+
+.accordion-content {
+  color: rgb(250, 250, 250);
+  height: 100%;
+  
+  margin: auto;
+  margin-bottom: 0;
+  margin-right: calc(-1 * calc(100% - 195px));
+  padding: 30px;
+  width: calc(100% - 195px);
+  box-sizing: border-box;
+  overflow: auto;
+  position: relative;
+  transition: margin 0.3s ease 0.1s;
+} 
+
 
 object{
-    display: block;
-    position: fixed; /* or absolute */
-    width: 100%;
-    height: 100%;
-    margin: -8px;
-    
+  display: block;
+  transform: skewX(15deg);
+  width: 80%;
+  height: 100%;
+  margin: auto;
+  text-align: center;
 }
 
-body{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-a{
-    position: relative;
-    top: 35px;
-    left: 30px;
-    color: white;
-    text-decoration: none;
-    text-shadow: 1px 1px black;
-    font-weight: bold;
-}
-
-h1{
-  text-decoration: underline;
-  font-size: 30pt;
-}
-
-p{
-  font-style: italic;
-}
-
-
-.container {
-    height: 500px;
-    width: 500px;
-    background-color:rgba(0, 0, 0, 0.75);
-    border-radius: 50%;
-    border: solid;
-    border-width: 5px;
-    border-color: white;
-    position: fixed; /* or absolute */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  .center{
-    position: relative;
-    text-align: center;
-    top: 175px;
-
-    
-  }
-
-  .about{
-    position: absolute;
-    text-align: center;
-    line-height: 90px;
-    height: 100px;
-    width: 100px;
-    left: 195px;
-    top: -50px;
-    border: solid; 
-    border-color: white;
-    border-width: 3px;
-    border-radius: 50%;
-    background-image: linear-gradient(rgb(0,155,155), rgb(0,0,255));
-    transition:border-color 0.3s ease-in-out;
-    
-  }
-  .about:hover  {  
-    border-color: blue;
-  }
-     
-
-
-  .projects{
-    position: absolute;  
-    text-align: center;
-    line-height: 90px;
-    height: 100px;
-    width: 100px;
-    left: 425px;
-    top: 100px;
-    border-radius: 50%;
-    border: solid;
-    border-color: white;
-    border-width: 3px;
-    background-image: linear-gradient(rgb(0,255,0), rgb(0, 82, 18));
-    transition:border-color 0.3s ease-in-out;
-  }
-  .projects:hover{
-    border-color: green;
-  }
-
-
-  .blog{
-    position: absolute;  
-    text-align: center;
-    line-height: 90px;
-    height: 100px;
-    width: 100px;
-    left: -25px;
-    top: 100px;
-    border-radius: 50%;
-    border: solid;
-    border-color: white;
-    border-width: 3px;
-    background-image: linear-gradient( rgb(153, 0, 255),rgb(100, 0, 70));
-    transition:border-color 0.3s ease-in-out;
-  }
-  .blog:hover{
-    border-color: purple;
-  }
-
-  .media{
-    position: absolute;  
-    text-align: center;
-    line-height: 90px;
-    height: 100px;
-    width: 100px;
-    left: 25px;
-    top: 375px;
-
-    border-radius: 50%;
-    border: solid;
-    border-color: white;
-    border-width: 3px;
-    background-image: linear-gradient( rgb(255,0,0),rgb(50,0,0));
-    transition:border-color 0.3s ease-in-out;
-  }
-  .media:hover{
-    border-color: rgb(155, 0, 0);
-  }
-
-  .contact{
-    position: absolute;  
-    text-align: center;
-    line-height: 90px;
-    height: 100px;
-    width: 100px;
-    left: 375px;
-    top: 375px;
-    border-radius: 50%;
-    border: solid;
-    border-color: white;
-    border-width: 3px;
-    background-image: linear-gradient(rgb(255,255,0),rgb(155, 100, 0));
-    transition:border-color 0.3s ease-in-out;
-  }
-
-  .contact:hover{
-    border-color: yellow;
-  }
-
-
-
-  @media screen and (max-device-width: 800px) {
-    a{
-      font-size: 30px;
-    }
-    
-    .container {
-      height: 800px;
-      width: 800px;
-      background-color:rgba(0, 0, 0, 0.75);
-      border-radius: 50%;
-      border: solid;
-      border-width: 10px;
-      border-color: white;
-      position: fixed; /* or absolute */
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .center{
-      top: 300px;
-      font-size: 25px;
-    }
-
-    .center h1{
-      font-size: 65px;
-    }
-
-    .media{
-      line-height: 175px;
-      height: 200px;
-      width: 200px;
-      left: -66px;
-      top: 150px;
-      border-width: 5px;
-    }
-
-    .blog{
-      line-height: 175px;
-      height: 200px;
-      width: 200px;
-      left: 50px;
-      top: 600px;
-      border-width: 5px;
-    }
-
-    .projects{
-      line-height: 175px;
-      height: 200px;
-      width: 200px;
-      border-width: 5px;
-      left: 666px;
-      top: 150px;
-    }
-    .contact{
-      line-height: 175px;
-      height: 200px;
-      width: 200px;
-      border-width: 5px;
-      left: 550px;
-      top: 600px;
-    }
-    .about{
-      line-height: 175px;
-      height: 200px;
-      width: 200px;
-      border-width: 5px;
-      left: 300px;
-      top: -100px;
-    }
-
-  }
-
-  @media screen and (max-width: 800px) {
-    body {
-        width: 100%;
-    }
-
-    .content{
-        margin: 3%;
-    }
-    
-}
 
