--- a/media/media.css
+++ b/media/media.css
@@ -1,15 +1,20 @@
 body{
-    background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    width: 67%;
     margin: auto;
     margin-top: 3%;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+  }
+
+body {
+    -ms-overflow-style: none;
+  }
+
 .title{
     margin-bottom: 50px;
-    color: rgb(255,0,0);
 }
 
 .title h1{
@@ -30,18 +35,13 @@ h1{
     text-decoration: underline;
 }
 
-.container{
-    background-image: linear-gradient( rgb(255,0,0),rgb(50,0,0));
-
-
-}
-
 .content{
     margin: 1%;
-    background: black;
     padding-left: 1%;
     padding: 3%;
 }
+
+
 
 @media screen and (max-device-width: 800px) {
     body {
